finished the assignment

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link href="./globals.css" rel="stylesheet" />
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
+    <script defer type="module" src="/src/main.ts"></script>
   </body>
 </html>
